1.0.12

 - Fixed connection spinning in contrib/hotline.
 - Fixed Unicode problems in ardj console (CLI).
 - Fixed the voters command in fresh install (Jabber).
 - Fixed a bug in the MySQL database driver.
 - Fixed missing tags when downloading from Jamendo.
 - Fixed missing schedule update (cron).
 - Fixed ISE handling in contrib/newswire url shortener.
 - Fixed the SQL command (jabber).
 - Fixed some error logging.
 - Fixed running from the source tree.
 - Fixed the database console.
 - Fixed lasting transactions in web UI.
 - Added history for twitter-fetcher (contrib).
 - Added an option to disable voting (config).
 - Added automatic promotion of most active voters to admins.
 - Added support for sysvinit (Debian).
 - Added a default response for commands echo, sql and show-news-from-jamendo (Jabber).
 - Added better logging for the skip command (Jabber).
 - Added a handler to retrieve current track info (WebAPI).
 - Added authentication to certain web api calls.
 - Added api/status.js (WebAPI).
 - Added nice -n15 to the downloaded music processor.
 - Added more methods to the Python track API.
 - Added a way to share tracks without external URL info.
 - Added a CLI command to dump daily/hourly vote stats.
 - Added CORS to Web API.
 - Added spam protection to the twitter widget (contrib).
 - Added image and download options to the set command.
 - Removed old commands: hotline, icelog, listeners, mail (CLI).
 - Changed tags order in tags/show: subtags go last.