@@ -12,6 +12,7 @@
  - Fixed running from the source tree.
  - Fixed the database console.
  - Fixed lasting transactions in web UI.
+ - Fixed prerolls.
  - Added history for twitter-fetcher (contrib).
  - Added an option to disable voting (config).
  - Added automatic promotion of most active voters to admins.
